fixed whitegap at bottom of page

--- a/src/Visualizer/Nodes/Grid.css
+++ b/src/Visualizer/Nodes/Grid.css
@@ -2,7 +2,7 @@
   display: inline-block;
 }
 .Grid {
-  margin: 5px 50% 10px 0;
+  margin: 3% 50% -40px 0;
   width: 100%;
   padding: 27px;
 }
